--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,32 +1,64 @@
-html,
+/* html,
 body,
 #react-root {
   height: 100%;
+} */
+
+.modal {
+  text-align: center;
+  max-height: 100vh;
+  overflow-y: scroll;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: absolute;
+  border-radius: 5px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) !important;
 }
 
-body {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  margin: 0px;
+.modal-body {
+  background-color: white;
 }
 
-img {
+.modalHeader {
+  background-color: rgb(199, 199, 198);
+}
+
+.modalTitle {
+  background-color: rgb(199, 199, 198);
+}
+
+.modalForm {
+  background-color: white;
+}
+
+.formDiv {
+  background-color: white;
+}
+
+.modalFooter {
+  background-color: rgb(199, 199, 198);
+}
+
+input {
+  border-radius: 5px;
+}
+select {
+  border-radius: 5px;
+}
+
+/* img {
   display: inline-block;
   max-width: 100%;
 }
 
-/* --------------------------------------------------------------------------------
-Container
--------------------------------------------------------------------------------- */
-
 .container {
   padding: 20px;
-}
+} */
 
-/* --------------------------------------------------------------------------------
-Button
--------------------------------------------------------------------------------- */
-
-.btn {
+/* .btn {
   display: inline-block;
   padding: 10px 20px;
   border-color: #014041;
@@ -37,9 +69,9 @@ Button
   font-size: 1.1rem;
   outline: 0;
   cursor: pointer;
-}
+} */
 
-.btn_sizeMin {
+/* .btn_sizeMin {
   min-height: 50px;
   min-width: 100px;
 }
@@ -59,7 +91,6 @@ Button
   text-decoration: none;
 }
 
-/* This line makes the "Register" and "Login" buttons look like links */
 .btn_asLink {
   padding: 0;
   border-width: 0;
@@ -76,10 +107,6 @@ Button
   color: #008183;
 }
 
-/* --------------------------------------------------------------------------------
-Alert
--------------------------------------------------------------------------------- */
-
 .alert {
   box-sizing: border-box;
   padding: 15px 10px;
@@ -90,10 +117,6 @@ Alert
   color: #e01616;
   font-size: 0.8rem;
 }
-
-/* --------------------------------------------------------------------------------
-Form Treatment
--------------------------------------------------------------------------------- */
 
 .formPanel {
   box-sizing: border-box;
@@ -109,4 +132,4 @@ Form Treatment
 input {
   margin: 5px;
   margin-bottom: 10px;
-}
+} */
