Fixing backend to allow for getting equipment. Need to format times and add applied date.

--- a/src/components/_DR_SubmissonForm/SubmissionForm.css
+++ b/src/components/_DR_SubmissonForm/SubmissionForm.css
@@ -24,3 +24,9 @@ body {
 #form-header {
     text-decoration: underline #84D3E8;
 }
+
+#table-container {
+        border-radius: 10px;
+        padding: 55px;
+        box-shadow: 1px 1px 10px #aaaaaa;
+}
