inventory view edits

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -49,6 +49,10 @@ select {
   border-radius: 5px;
 }
 
+.filterStatus {
+  text-align: center;
+}
+
 /* img {
   display: inline-block;
   max-width: 100%;
