--- a/src/components/_DR_SubmissonForm/SubmissionForm.css
+++ b/src/components/_DR_SubmissonForm/SubmissionForm.css
@@ -26,7 +26,12 @@ body {
 }
 
 #table-container {
-        border-radius: 10px;
-        padding: 55px;
-        box-shadow: 1px 1px 10px #aaaaaa;
+    width: 100%;
+    border-radius: 10px;
+    box-shadow: 1px 1px 10px #aaaaaa;
+}
+
+#table-col-increase-padding {
+    padding-left: 55px;
+    padding-right: 55px;
 }
