some nav bar stuff done

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -53,9 +53,10 @@ select {
   text-align: center;
 }
 
-.deleteButton {
-  text-align: "right";
+.btn-outline-primary {
+  color: #1a7696 !important;
 }
+
 /* img {
   display: inline-block;
   max-width: 100%;
