--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,4 +1,4 @@
-.nav-title {
+/* .nav-title {
   font-size: 24px;
   font-weight: 700;
   display: inline-block;
@@ -6,32 +6,44 @@
   padding-left: 10px;
 }
 
-.nav {
-  margin: 0 0 30px;
-  background-color: #00acb0;
-  overflow: hidden;
-}
-
 .nav-link {
   float: left;
-  color: #f2f2f2;
-  background-color: #00acb0;
   text-align: center;
   padding: 24px 10px;
   text-decoration: none;
-  font-size: 15px;
+  font-size: 15px; */
 
-  /* these last two make the logout button in
+/* these last two make the logout button in
   the nav bar look like another link */
-  border: none;
+/*   border: none;
   cursor: pointer;
   outline: 0;
 }
 
-.nav-link:hover {
-  background-color: #008183;
-}
+
 
 .nav-right {
   float: right;
+}
+
+
+ */
+
+.nav-link {
+  display: inline;
+}
+
+.logout-button {
+  margin-left: 400px;
+}
+
+.nav-link:hover {
+  background-color: #1a7696;
+  border-radius: 15px;
+
+  transition: all 300ms linear;
+}
+
+loginLinkData.text {
+  color: white;
 }
