--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -31,6 +31,10 @@
 
 .nav-link {
   display: inline;
+  padding-top: 0;
+  padding-bottom: 0;
+  height: 50px;
+  line-height: 50px;
 }
 
 .logout-button {
